--- a/PaaS/小程序/Demo/miniprogram/components/webrtc-room/template/1v1/layout.wxss
+++ b/PaaS/小程序/Demo/miniprogram/components/webrtc-room/template/1v1/layout.wxss
@@ -1,61 +1,54 @@
 .t1v1.videoview {
   position: relative;
-  display: flex;
   background-repeat: no-repeat;
   background-size: cover;
+  width: 100%;
+  height: 100%;
+  background-color: #2A2C2F;
+}
+
+.t1v1 .video-box {
+  position: absolute;
+  display: flex;
+  left: 0;
+  top: 0;
   width: 100%;
   height: 100%;
 }
 
 @media (orientation: portrait) {
+  .t1v1 .video-box {
+    flex-direction: row;
+  }
+
   .t1v1 .pusher-box {
-    position: absolute;
-    display: inline-block;
-    left: 0vw;
-    top: 0vh;
-    height: calc(23vh - 5px);
-    width: 50vw;
-    overflow: hidden;
-    text-align: center;
+    position: relative;
+    flex: 1;
   }
 
   .t1v1 .player-box {
-    position: absolute;
-    display: inline-block;
-    left: 50vw;
-    top: 0vh;
-    height: calc(23vh - 5px);
-    width: 50vw;
-    overflow: hidden;
-    text-align: center;
-    vertical-align: top;
+    position: relative;
+    flex: 1;
   }
 }
 
+/* 横屏 */
 @media (orientation: landscape) {
+  .t1v1 .video-box {
+    flex-direction: column;
+  }
+
   .t1v1 .pusher-box {
-    position: absolute;
-    display: inline-block;
-    top: 0vh;
-    left: 0vw;
-    height: 50vh;
-    width: calc(19vw - 5px);
-    overflow: hidden;
-    text-align: center;
+    position: relative;
+    flex: 1;
   }
 
   .t1v1 .player-box {
-    position: absolute;
-    display: inline-block;
-    top: 50vh;
-    left: 0vw;
-    height: 50vh;
-    width: calc(19vw - 5px);
-    overflow: hidden;
-    text-align: center;
-    vertical-align: top;
+    position: relative;
+    flex: 1;
   }
 }
+
 
 
 .t1v1 live-pusher {
@@ -81,6 +74,11 @@
 .t1v1 live-player {
   width: 100%;
   height: 100%;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
 }
 
 .t1v1 .loading {
