--- a/PaaS/小程序/Demo/miniprogram/components/webrtc-room/webrtc-room.wxml
+++ b/PaaS/小程序/Demo/miniprogram/components/webrtc-room/webrtc-room.wxml
@@ -1,10 +1,6 @@
 <import src='./template/1v1/layout.wxml' />
-<import src='./template/1v1playmain/layout.wxml' />
 <view class='conponent-box'>
   <view style="width:100%;height:100%;" wx:if="{{template=='1v1'}}">
-    <template is='1v1' data="{{pushURL, aspect, minBitrate, maxBitrate, beauty, whiteness, muted, debug, members, creator, enableIM, enableCamera, smallViewLeft, smallViewTop, smallViewWidth, smallViewHeight, startPlay, fixPlayId, playerBackgroundImg, waitingImg, loadingImg, pusherBackgroundImg}}" />
-  </view>
-  <view style="width:100%;height:100%;" wx:if="{{template=='1v1bigsmall'}}">
-    <template is='1v1playmain' data="{{pushURL, aspect, minBitrate, maxBitrate, beauty, whiteness, muted, debug, members, creator, enableIM, enableCamera, smallViewLeft, smallViewTop, smallViewWidth, smallViewHeight, startPlay, fixPlayId, playerBackgroundImg, waitingImg, loadingImg, pusherBackgroundImg}}" />
+    <template is='1v1' data="{{videoWidth, roomID, pushURL, aspect, minBitrate, maxBitrate, beauty, whiteness, muted, debug, members, enableCamera, startPlay, playerBackgroundImg, waitingImg, loadingImg, pusherBackgroundImg, showMsgBox, msgBoxScrollTop, msgs, showTextArea, inputFocus, chatMsg, hideImTooIs}}" />
   </view>
 </view>
