--- a/PaaS/小程序/Demo/miniprogram/pages/tic/classroom_new/room.wxml
+++ b/PaaS/小程序/Demo/miniprogram/pages/tic/classroom_new/room.wxml
@@ -1,6 +1,10 @@
-<view class="container">
-  <view class="camera-box" hidden="{{boardShowFullScreen}}">
-    <webrtc-room id="webrtcroom" wx:if="{{!!template}}" template="{{template}}" roomID="{{roomID}}" userID="{{userID}}" userSig="{{userSig}}" sdkAppID="{{sdkAppID}}" privateMapKey="{{privateMapKey}}" smallViewLeft="{{smallViewLeft}}" smallViewTop="{{smallViewTop}}" smallViewWidth="{{smallViewWidth}}" smallViewHeight="{{smallViewHeight}}" enableCamera="{{enableCamera}}" playerBackgroundImg="{{playerBackgroundImg}}" enableIM="{{false}}" bindRoomEvent="onRoomEvent"></webrtc-room>
+<view class="tedu-container">
+  <view class="tedu-class__box">
+    <web-view class="tedu-webpage-container" wx:if="{{loadClass}}" src="{{classUrl}}" bindload="webviewLoad" binderror="webviewError"></web-view>
   </view>
-  <web-view class="tclass-box" style="z-index: 10;" src="{{classUrl}}"></web-view>
+  <view class="tedu-camera-chat__box" style="width:{{videoSize}}px;height:{{videoSize}}px;">
+    <webrtc-room class="tedu-camera__box" wx:if="{{loadClass}}" id="webrtcroom" template="{{template}}" 
+    roomID="{{roomID}}" userID="{{userID}}" userSig="{{userSig}}" 
+    sdkAppID="{{sdkAppId}}" playerBackgroundImg="{{playerBackgroundImg}}" enableIM="{{false}}" bindRoomEvent="onRoomEvent"></webrtc-room>
+  </view>
 </view>
