--- a/PaaS/小程序/Demo/miniprogram/pages/tic/classroom_new/room.wxss
+++ b/PaaS/小程序/Demo/miniprogram/pages/tic/classroom_new/room.wxss
@@ -1,38 +1,51 @@
 /**index.wxss**/
-.container {
+.tedu-container {
   position: relative;
   width: 100vw;
   height: 100vh;
   background-image: url(https://mc.qcloudimg.com/static/img/7da57e0050d308e2e1b1e31afbc42929/bg.png);
-  background-color: #fff;
   background-repeat: no-repeat;
   background-size: cover;
   overflow: hidden;
+  background-color: #2A2C2F;
 }
 
-.camera-box {
+.tedu-class__box {
   position: absolute;
-  z-index: 10;
+  background-color: #2A2C2F;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
 }
 
-
-.tclass-box {
-  position: absolute;
-  z-index: 12;
+/* webview */
+.tedu-class__box .tedu-webpage-container {
+  background-color: #2A2C2F;
 }
 
+/* 竖屏*/
 @media (orientation: portrait) {
-  .camera-box {
-    width: 100vw;
-    height: 23vh;
-    /*calc(100vh - 100vw * 9 / 16 - 80rpx - 80rpx);*/
+  .tedu-camera-chat__box {
+    background: red;
+    width: 100vw !important;
+  }
+
+  .tedu-camera__box {
+    width: 100%;
+    height: 100%;
   }
 }
 
+/* 横屏*/
 @media (orientation: landscape) {
-  .camera-box {
-    width: 20vw;
-    /*calc(100vw - 100vh * 16 / 9 - 80rpx - 80rpx);*/
-    height: 100vh;
+  .tedu-camera-chat__box {
+    background: yellow;
+    flex-direction: column;
+    height: 100vh !important;
+  }
+
+  .tedu-camera__box {
+    width: 100%;
+    height: 100%;
   }
 }
