--- a/PaaS/Android/Demo/app/src/main/res/layout/activity_manager_layout.xml
+++ b/PaaS/Android/Demo/app/src/main/res/layout/activity_manager_layout.xml
@@ -10,33 +10,38 @@
         android:gravity="bottom"
         android:visibility="visible" />
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:gravity="top|left"
+        android:padding="10dp"
         android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/tv_classInfo"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@android:color/darker_gray"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/abc_text_size_large_material" />
+            android:orientation="horizontal">
 
-        <EditText
-            android:id="@+id/et_roomid"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="room id"
-            android:text="8008" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="5dp"
+                android:text="房间号：" />
+
+            <EditText
+                android:id="@+id/et_roomid"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="room id"
+                android:text="8008" />
+        </LinearLayout>
 
         <LinearLayout
+            android:layout_marginTop="10dp"
             android:id="@+id/rl_class_operation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:orientation="horizontal">
 
 
@@ -65,8 +70,7 @@
                 android:text="销毁"
                 android:visibility="visible" />
         </LinearLayout>
-
-
     </LinearLayout>
+
 
 </FrameLayout>
