--- a/PaaS/Android/Demo/app/src/main/res/layout/activity_login_layout.xml
+++ b/PaaS/Android/Demo/app/src/main/res/layout/activity_login_layout.xml
@@ -57,7 +57,7 @@
             android:text="登录" />
 
         <Button
-            android:id="@+id/btn_login"
+            android:id="@+id/btn_logout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="onLogoutClick"
