[demo]增加sdk中uninit接口。

--- a/PaaS/Android/Demo/app/src/main/res/layout/activity_manager_layout.xml
+++ b/PaaS/Android/Demo/app/src/main/res/layout/activity_manager_layout.xml
@@ -70,6 +70,13 @@
                 android:text="销毁"
                 android:visibility="visible" />
         </LinearLayout>
+
+        <FrameLayout
+            android:id="@+id/webview_container"
+            android:layout_width="match_parent"
+            android:background="@color/colorBlue"
+            android:layout_height="400dp"/>
+
     </LinearLayout>
 
 
