--- a/PaaS/Android/Demo/app/src/main/res/layout/dlg_setting.xml
+++ b/PaaS/Android/Demo/app/src/main/res/layout/dlg_setting.xml
@@ -255,6 +255,33 @@
             android:layout_marginTop="5dp"
             android:layout_marginBottom="2dp">
             <TextView
+                android:text="笔锋开关"
+                android:textSize="16sp"
+                android:layout_gravity="center"
+                android:textColor="@color/line_btn"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.3"
+                />
+            <FrameLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.7">
+                <CheckBox
+                    android:id="@+id/board_setHandwritingEnable"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"/>
+            </FrameLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="2dp">
+            <TextView
                 android:text="涂鸭工具"
                 android:textSize="16sp"
                 android:layout_gravity="center"
@@ -1210,6 +1237,38 @@
                     android:clickable="true"/>
 
             </RelativeLayout>
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="2dp">
+            <TextView
+                android:text="批量图片"
+                android:textSize="16sp"
+                android:layout_gravity="center"
+                android:textColor="@color/line_btn"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.3"
+                />
+            <FrameLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.7"
+                >
+                <Button
+                    android:id="@+id/btn_addImagesFile"
+                    android:layout_width="wrap_content"
+                    android:layout_height="36dp"
+                    android:text="导入"
+                    android:textSize="14sp"
+                    android:layout_gravity="right"
+                    android:clickable="true"/>
+            </FrameLayout>
         </LinearLayout>
 
 
