小程序发布2.4.5的相关demo

--- a/PaaS/小程序/webrtc-room + canvas/miniprogram/components/board-component/board-component.wxml
+++ b/PaaS/小程序/webrtc-room + canvas/miniprogram/components/board-component/board-component.wxml
@@ -4,7 +4,7 @@
     <canvas class="tic_board_canvas" canvas-id="tic_board_canvas">
       <slot></slot>
     </canvas>
-    <image id="tic_board_img_bg" class="tic_board_img_bg {{orientation}}" hidden="{{hideImg}}" style="{{imgStyle}}" wx:if="{{currentPic}}" src="{{currentPic}}" bindload="imgOnLoad" binderror="imgOnLoadError"></image>
+    <image id="tic_board_img_bg" data-src="{{currentPic}}" data-board="{{currentBoard}}" class="tic_board_img_bg {{orientation}}" hidden="{{hideImg}}" style="{{imgStyle}}" wx:if="{{currentPic}}" src="{{currentPic}}" bindload="imgOnLoad" binderror="imgOnLoadError"></image>
     <view class="tic_board_color_bg" style="background-color:{{bgColor}}"></view>
     <view>
       <image wx:for="{{ imgLoadList }}" wx:key="*this" src="{{ item }}" data-src="{{ item }}" style="width:0;height:0;" />
