--- a/PaaS/Android/Demo/app/src/main/res/layout/activity_manager_layout.xml
+++ b/PaaS/Android/Demo/app/src/main/res/layout/activity_manager_layout.xml
@@ -3,19 +3,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/tv_manager_log"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="bottom"
-        android:visibility="visible" />
-
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="10dp"
         android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="5dp"
+                android:textSize="20dp"
+                android:onClick="onExit"
+                android:text="退出" />
+        </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -41,7 +48,7 @@
             android:id="@+id/rl_class_operation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
+            android:gravity="left"
             android:orientation="horizontal">
 
 
@@ -75,7 +82,7 @@
             android:id="@+id/webview_container"
             android:layout_width="match_parent"
             android:background="@color/colorBlue"
-            android:layout_height="400dp"/>
+            android:layout_height="460dp"/>
 
     </LinearLayout>
 
