--- a/PaaS/Android/Demo/app/src/main/res/layout/activity_class_ex.xml
+++ b/PaaS/Android/Demo/app/src/main/res/layout/activity_class_ex.xml
@@ -47,7 +47,7 @@
                         android:layout_marginLeft="@dimen/default_horizontal_margin"
                         android:layout_marginRight="@dimen/default_horizontal_margin"
                         android:layout_weight="4"
-                        android:background="@color/colorWhite"
+                        android:background="@color/colorGray"
                         android:focusableInTouchMode="false"
                         android:gravity="center_vertical|left"
                         android:imeOptions="actionSend"
